<resources>
    <string name="app_name">NeRecipes</string>
    <string name="options">Options</string>

    <string name="remove">Remove</string>

    <string name="edit">Edit</string>
    <string name="search">Search</string>

    <string name="step_with_counter">Step %1$d</string>
    <string name="recipe_step_description_hint">Enter recipe step description</string>
    <string name="recipe_description">Если просто, шарлотка - яблочный пирог. Хотя этот пирог и называется шарлотка, рецепт приготовления его очень напоминает яблочный бисквит. Что касается названия шарлотки, существует романтичная история о безнадёжно влюблённом поваре, который придумал как готовить шарлотку с яблоками и посвятил этот рецепт даме своего сердца Шарлотте. Так появился пирог шарлотка.</string>
    <string name="recipe_step_description">Recipe step description</string>
    <string name="recipe_author">Recipe author</string>
    <string name="recipe_title">Recipe title</string>
    <string name="recipe_title_hint">Recipe title</string>
    <string name="recipe_author_hint">Recipe author</string>
    <string name="recipe_description_hint">Enter recipe description</string>

    <string name="recipe_save">Save</string>
    <string name="add_recipe">Add recipe</string>
    <string name="add_step">Add recipe step</string>
    <string name="recipe_step_save">Save recipe step</string>

    <!-- Bottom tab nav names -->
    <string name="title_home">Home</string>
    <string name="filters">Filter</string>
    <string name="favorites">Favorites</string>

    <!-- Recipe tab names -->
    <string name="summary">Summary</string>
    <string name="by_steps">By steps</string>
    <string name="details">Details</string>
    <string name="Recipe_description_create_fragment_title">Editor/Description</string>
    <string name="Recipe_step_create_fragment_title">Editor/Steps</string>

    <!-- Search filters for checkboxes-->
    <string name="european">European</string>
    <string name="asian">Asian</string>
    <string name="panAsian">Pan - Asian</string>
    <string name="eastern">Eastern</string>
    <string name="american">American</string>
    <string name="russian">Russian</string>
    <string name="mediterranean">Mediterranean</string>

    <string name="selectAll">Select All</string>

    <!-- Recipe categories -->
    <string name="recipe_category">Recipe category</string>
    <string-array name="category_list">
        <item>European</item>
        <item>Asian</item>
        <item>Pan - Asian</item>
        <item>Eastern</item>
        <item>American</item>
        <item>Russian</item>
        <item>Mediterranean</item>
    </string-array>

    <string name="feed_fragment_greeting">Save your recipes and enjoy your food!</string>
    <string name="default_recipe_title">Recipe</string>
    <string name="default_recipe_author">Red Badger</string>


</resources>