<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/recipe_title"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/author_name"
        app:layout_constraintEnd_toStartOf="@id/options"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/recipe_title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/author_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/recipe_author"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@id/recipe_category"
        app:layout_constraintEnd_toStartOf="@id/options"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:text="@string/recipe_author" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/recipe_category"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/recipe_category"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/author_name"
        tools:text="@string/recipe_category" />

    <!-- optionsIcon -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/options"
        style="@style/Widget.AppTheme.OptionsCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/options"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@id/recipe_category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/header_barrier"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="recipe_category, options" />

</androidx.constraintlayout.widget.ConstraintLayout>