<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/common_spacing"
    android:id="@+id/step_fragment"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/recipe_step_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/step_with_counter"
        app:layout_constraintBottom_toBottomOf="@+id/options"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/step_with_counter" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/options"
        style="@style/Widget.AppTheme.OptionsCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/options"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@id/recipe_step_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/header_barrier"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="recipe_step_header, options" />

    <TextView
        android:id="@+id/recipe_step_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:text="@string/recipe_step_description"
        app:layout_constraintBottom_toTopOf="@+id/recipe_step_description_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_barrier"
        tools:text="@string/recipe_step_description" />



    <ImageView
        android:id="@+id/recipe_step_description_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recipe_step_description"
        app:srcCompat="@drawable/step_image_template" />

</androidx.constraintlayout.widget.ConstraintLayout>